2006-08-02  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/bmc-commit.c (bmc_commit_file): Output message on error.

	* bmc-config/src/bmc-lan-conf-section.c
	(bmc_lan_conf_section_get): Fix Vlan ID string.
	
2006-08-01  Albert Chu <chu11@llnl.gov>

	* fish/src/fish-argp.c (fi_argp_parse), fish/src/ipmi-wrapper.c
	(fi_ipmi_close, fi_ipmi_close, fi_get_ipmi_device),
	fish/src/scm-procedures.c (ex_ipmi_open): Minor temporary fixes to
	make ipmi-sensors work again.
	
2006-07-30  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Re-architect packages.
	
2006-07-29  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-ssif-api.c (_ipmi_ssif_cmd_write,
	_ipmi_ssif_cmd_read, ipmi_ssif_cmd): New functions.

	* bmc-watchdog/src/: Support ssif driver, --driver-type option,
	--driver-address option, and --driver-device option.

	* bmc-watchdog/bmc-watchdog.8.in, doc/freeipmi.texi: Updated with
	new options.

	* libfreeipmi/, bmc-watchdog/: Change locate structure
	bmc_i2c_dev_name to driver_device and base_address to
	driver_address globally for consistency.  Adjust kcs, ssif,
	openipmi apis for consistency.
	
2006-07-28  Albert Chu <chu11@llnl.gov>

	Various cleanup

	* libfreeipmi/src/udm/ipmi-lan-interface-udm.c (_ipmi_lan_dump,
	_ipmi_lan_dump_rq): Rework request dump output, since calculations
	won't have a trailer.

	* libfreeipmi/src/ipmi-kcs-api.c: Add forgotten headers.

	* libfreeipmi/src/udm/ipmi-udm.c (ipmi_open_inband): Fix
	ssif memcopying bug.

	* libfreeipmi/srd/udm/ipmi-udm-device.h: Remove locate_info.  Not
	necessary to store in device.

	* libfreeipmi/src/udm/ipmi-udm.c (ipmi_open_inband): Adjust for
	device structure change.

	Add OpenIPMI as a possibly driver to use with FreeIPMI

	* libfreeipmi/src/ipmi-openipmi-api.c,
	libfreeipmi/include/freeipmi/ipmi-openipmi-api.h,
	libfreeipmi/srd/udm/ipmi-openipmi-api-udm.c,
	libfreeipmi/include/freeipmi/udm/ipmi-openipmi-api-udm.h: New
	files.

	* libfreeipmi/src/Makefile.am, libfreeipmi/src/udm/Makefile.am, 